hphp/test/slow/reified_generics/reified-param-primitive-2a.php.expectf

Warning: Argument 1 passed to f() must be an instance of D<shape('a' => C<int>, 'b' => string)>, D<shape('a'=>C<string>,'b'=>string)> given in %s on line 6

Catchable fatal error: Argument 1 passed to f() must be an instance of D<shape('a' => C<int>, 'b' => int)>, D<shape('a'=>C<string>,'b'=>string)> given in %s on line 13
